<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="72dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mis referencias"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/textView6" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_shape">

                <Spinner
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/type"
                    android:backgroundTint="@color/colorAccent"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:id="@+id/place_lay">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:layout_weight="0.67">

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:id="@+id/imageView10"
                        android:src="@drawable/profile_grey" />
                </LinearLayout>

                <EditText
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/name_hint"
                    android:textColor="@color/SecundaryText" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:layout_weight="0.69" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:id="@+id/imageView11"
                        android:src="@drawable/relation" />
                </LinearLayout>

                <EditText
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/relation"
                    android:hint="@string/relation"
                    android:textColor="@color/SecundaryText"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:weightSum="1" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:layout_weight="0.69" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:id="@+id/imageView27"
                        android:src="@drawable/profesional_unselected" />
                </LinearLayout>

                <EditText
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/occupation"
                    android:hint="@string/occupation"
                    android:textColor="@color/SecundaryText"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:weightSum="1" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:layout_weight="0.69" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:id="@+id/imageView28"
                        android:src="@drawable/contact" />
                </LinearLayout>

                <EditText
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/contact"
                    android:hint="@string/contact"
                    android:textColor="@color/SecundaryText"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:textColor="#FFFF"
                android:elevation="5dp"
                android:background="@drawable/button"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>